# charm-rolling-ops

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  actions.yaml  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  spread.yaml  tox.ini
.github/workflows/: ci.yaml  release.yaml
lib/charms/rolling_ops/v0/: retriable_rolling_ops.py  rollingops.py
lib/charms/rolling_ops/v1/: rollingops.py
scripts/: rollingops_worker.py
src/: charm.py  rollingops_async.py
tests/charms/v0/: actions.yaml  metadata.yaml  pyproject.toml
tests/charms/v0/src/: charm.py
tests/charms/v1/: actions.yaml  charmcraft.yaml  metadata.yaml  pyproject.toml
tests/charms/v1/lib/charms/rolling_ops/v1/: rollingops.py
tests/charms/v1/src/: charm.py
tests/integration/: __init__.py  conftest.py  smoke_test.py  test_charm.py  test_smoke_v0.py  test_smoke_v1.py
tests/integration/ha/: helpers.py  test_deployment.py
tests/spread/smoke_test.py/: task.yaml
tests/spread/smoke_test_v1.py/: task.yaml
tests/spread/test_smoke_v0.py/: task.yaml
tests/spread/test_smoke_v1.py/: task.yaml
tests/spread/test_smoke_v1_lxd.py/: task.yaml
tests/spread/test_smoke_v1_microk8s.py/: task.yaml
tests/unit/: test_charm.py  test_charm_v0.py  test_charm_v1.py
